Bug 64586 - PPT does not import text in placeholders
Summary: PPT does not import text in placeholders
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: high critical
Assignee: Jan Holesovsky
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-05-14 14:28 UTC by Jan Holesovsky
Modified: 2013-05-15 07:58 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Holesovsky 2013-05-14 14:28:47 UTC
Open Impress, write 'Blah' to the "Click to add text" field, save as .ppt.

Close, and reopen - see the 'Blah' is gone.

Seen with master at commit cd1034f87ae0c03d8107e2e1fd8f968c3f7075b3 .
Comment 1 Jorendc 2013-05-14 17:06:35 UTC
Odd ...

I can NOT reproduce this using Linux Mint 14 x64 with LibreOffice Version 4.0.3.3 (Build ID: 0eaa50a932c8f2199a615e1eb30f7ac74279539)...
Comment 2 Jorendc 2013-05-14 17:11:29 UTC
(In reply to comment #1)
> Odd ...
> 
> I can NOT reproduce this using Linux Mint 14 x64 with LibreOffice Version
> 4.0.3.3 (Build ID: 0eaa50a932c8f2199a615e1eb30f7ac74279539)...


Okay ... forget that comment ... I tested it using the wrong version :'-). My bad!

I CAN reproduce it using LibreOffice Version: 4.1.0.0.alpha1+
Build ID: e9e1d7fc4de8fc44adf35fe302c75591b3c5bc1

Sorry for the noise.
Comment 3 Jorendc 2013-05-14 22:24:08 UTC
Little update:

I'm bibisecting (not by package but by building itself) and this are the results from today:

Version 4.1.0.0.alpha0+ (Build ID: 5b9d9eb08dcb6a6ce029bbbce05b71946a7f712) good
Version: 4.1.0.0.alpha0+ Build ID: 808d14765bcf57870c9306c40a431e525b0eaa7 good
Version: 4.1.0.0.alpha0+ Build ID: b993c5591e965de3b9e95e32007ea4231b2997d good

so, as far I get today, this is the range: http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=%09b993c5591e965de3b9e95e32007ea4231b2997d7..cd1034f87ae0c03d8107e2e1fd8f968c3f7075b3

I'll build 3 or 4 times more tomorrow. I think we have a quite narrow range by then.

Kind regards,
Joren
Comment 4 Jan Holesovsky 2013-05-15 07:32:24 UTC
Actually, it is a regression I brought in :-/  I have a fix now, will push in minutes.