fdo#64586: Fix incorrect import non-empty placeholders + unit test.

Change-Id: Ibcb61dfa12c67fd9f93713ba7eb93f947b122f07